--- a/content/portfolio/project-4.Rmd
+++ b/content/portfolio/project-4.Rmd
@@ -1,28 +1,83 @@
 ---
+title: "GDP components over time and among countries"
+client: Self-work
+date: '2020-10-05'
+description: This is meta description.
+draft: no
+image: images/portfolio/gdp.png
+project_url: unstats.un.org/unsd/snaama/
 categories:
 - Data analytics
 - Data visualization
 - Finance
 - Economics
-client: Self-work
-date: "2020-10-05T12:14:34+06:00"
-description: This is meta description.
-draft: false
-image: images/portfolio/gdp.png
-project_url: unstats.un.org/unsd/snaama/
-title: GDP components over time and among countries
 ---
+
+---
+output:
+  html_document:
+    theme: flatly
+    highlight: zenburn
+    number_sections: yes
+    toc: yes
+    toc_float: yes
+    code_folding: show
+---
+
+```{r, setup, echo=FALSE}
+knitr::opts_chunk$set(message = FALSE, 
+                      warning = FALSE, 
+                      tidy=FALSE,
+                      size="small")
+options(digits = 3)
+
+#figure sizes
+knitr::opts_chunk$set(fig.width=6.75, 
+                      fig.height=6.75,
+                      fig.align = "center")
+```
+
+```{r load-libraries, echo=FALSE}
+library(openxlsx)
+library(vroom)
+library(mosaic)
+library(skimr)
+library(leaflet)
+library(tidyverse)
+library(ggthemes)
+library(GGally)
+library(readxl)
+library(here)
+library(janitor)
+library(broom)
+library(tidyquant)
+library(infer)
+library(openintro)
+library(tidyquant)
+library(scales)
+library(ggfortify)
+library(huxtable)
+library(flextable)
+library (ggplot2)
+library (car)
+library (kableExtra)
+library (grid)
+library (gridExtra)
+
+# Huxtable automatically format *all* tables. This turns that off.
+options('huxtable.knit_print_df' = FALSE)
+```
 
 At the risk of oversimplifying things, the main components of gross domestic product, GDP are personal consumption (C), business investment (I), government spending (G) and net exports (exports - imports). You can read more about GDP and the different approaches in calculating at the [Wikipedia GDP page](https://en.wikipedia.org/wiki/Gross_domestic_product).
 
 The GDP data we will look at is from the [United Nations' National Accounts Main Aggregates Database](https://unstats.un.org/unsd/snaama/Downloads), which contains estimates of total GDP and its components for all countries from 1970 to today. We will look at how GDP and its components have changed over time, and compare different countries and how much each component contributes to that country's GDP. The file we will work with is [GDP and its breakdown at constant 2010 prices in US Dollars](http://unstats.un.org/unsd/amaapi/api/file/6) and it has already been saved in the Data directory. Have a look at the Excel file to see how it is structured and organised
 
 
-```{r read_GDP_data, eval=FALSE}
+```{r read_GDP_data}
 
-UN_GDP_data  <-  read_excel(here::here("data", "Download-GDPconstant-USD-countries.xls"), # Excel filename
-                sheet="Download-GDPconstant-USD-countr", # Sheet name
-                skip=2) # Number of rows to skip
+library(openxlsx)
+UN_GDP_data  <-  openxlsx::read.xlsx(here::here("data", "Download-GDPconstant-USD-countries.xlsx"))
+glimpse(UN_GDP_data)
 
 ```
 
@@ -59,9 +114,7 @@ We now produce a plot for comparing the GDP components over time for three count
 
 ```{r gdp1, echo=FALSE, out.width="100%"}
 
-# knitr::include_graphics(here::here("images", "gdp1.png"), error = FALSE)
-
-tidy_GDP_data_filt <- tidy_GDP_data %>% 
+tidy_GDP_data_filt <- tidy_GDP_data %>%
   filter(Country %in% country_list,
          IndicatorName %in% c("Exports", "Imports", "Gov_Expenditure", "Capital_formation", "Household_Consumption")) %>% 
   group_by(Country) %>% 
@@ -98,13 +151,11 @@ pivot_wider(names_from="IndicatorName", values_from="Obs") %>%
   select(Year, Country, GDP_Difference_Percentage)
 tidy_GDP_data_2
 
-#knitr::include_graphics(here::here("images", "gdp2.png"), error = FALSE)
-
 ```
 
 Lastly, this last chart shows us the different dynamic among these three countries (Germany, India and United States). In Germany, in 40 years there have no been important variations in the proportion of household or government expenditure among the total GDP. However, the proportion of net exports did increase, something that did not happen in India and in the US when compared to 1970. Moreover, India has experienced an important reduction in household expenditure and an increase in gross capital formation. A possible explanation of this is that households save more money and it ends up in investments and creation of new family businesses.
 
-```{r gdp2, echo=FALSE, out.width="100%"}
+```{r gdp2a, echo=FALSE, out.width="100%"}
 
 GDP_data_3 <- tidy_GDP_data %>% 
 
